        Adds ProfilerServer, which is a distributed notification listener         that allows starting and stopping the profiler remotely for use         in conjunction with the profiler's DTace probes.

https://bugs.webkit.org/show_bug.cgi?id=21719

        Reviewed by Timothy Hatcher.

        * JavaScriptCore.xcodeproj/project.pbxproj:
        * kjs/JSGlobalData.cpp:
        (JSC::JSGlobalData::JSGlobalData): Calls startProfilerServerIfNeeded.
        * profiler/ProfilerServer.h: Added.
        * profiler/ProfilerServer.mm: Added.
        (+[ProfilerServer sharedProfileServer]):
        (-[ProfilerServer init]):
        (-[ProfilerServer startProfiling]):
        (-[ProfilerServer stopProfiling]):
        (JSC::startProfilerServerIfNeeded):

git-svn-id: svn://svn.chromium.org/blink/trunk@38022 bbb929c8-8fbe-4397-9dbb-9b2b20218538