third_party/WebKit/JavaScriptCore/kjs/JSGlobalData.cpp
@@ -48,6 +48,10 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <wtf/Threading.h>
 #endif
 
+#if PLATFORM(MAC)
+#include "ProfilerServer.h"
+#endif
+
 using namespace WTF;
 
 namespace JSC {
@@ -90,6 +94,9 @@ JSGlobalData::JSGlobalData(bool isShared)
     , clientData(0)
     , heap(this)
 {
+#if PLATFORM(MAC)
+    startProfilerServerIfNeeded();
+#endif
 }
 
 JSGlobalData::~JSGlobalData()
